# clickclickclick

./: .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  api.py  main.py  pyproject.toml  requirements.txt
clickclickclick/: planner.logs
clickclickclick/config/: __init__.py  conf_types.py  models.yaml  prompts.yaml  yaml_loader.py
clickclickclick/config/function_declarations/: android.yaml  common.yaml  osx.yaml
clickclickclick/executor/: __init__.py  android.py  osx.py  wind.py
clickclickclick/finder/: __init__.py  gemini.py  local_ollama.py  mlx.py  openai.py
clickclickclick/planner/: __init__.py  gemini.py  local_ollama.py  openai.py  task.py
